@@ -64,6 +64,8 @@ import com.jcraft.jsch.SftpATTRS;
  * @author Gunnar Hillert
  * @author Gary Russell
  * @author Artem Bilan
+ * @author Joaquin Santana
+ *
  * @since 2.0
  */
 public class SftpInboundRemoteFileSystemSynchronizerTests {
@@ -170,7 +172,8 @@ public class SftpInboundRemoteFileSystemSynchronizerTests {
 
 				Calendar calendar = Calendar.getInstance();
 				calendar.add(Calendar.DATE, 1);
-				when(lsEntry.getAttrs().getMTime()).thenReturn(new Long(calendar.getTimeInMillis() / 1000).intValue());
+				when(lsEntry.getAttrs().getMTime())
+						.thenReturn(Long.valueOf(calendar.getTimeInMillis() / 1000).intValue());
 				when(lsEntry.getFilename()).thenReturn(fileName);
 				when(lsEntry.getLongname()).thenReturn(fileName);
 				sftpEntries.add(lsEntry);
